tests/pass/dynamic_global_chain.tc
int helper() {
  return 5;
}

int first = helper();
int second = first + 2;

int main() {
  return second;
}
