tests/fail/call_shadowed_function.tc
int helper() {
  return 1;
}

int main() {
  int helper = 2;
  return helper();
}
